--- a/scripts/15_mixed_models_pt1.Rmd
+++ b/scripts/15_mixed_models_pt1.Rmd
@@ -17,7 +17,23 @@ knitr::opts_chunk$set(echo = TRUE)
 
 In this workshop we will take our first look at (generalised) linear mixed models (GLMMs or LMMs). The use of LMMs is becoming increasingly widespread across many aspect of the Psychological and Life Sciences in place of more traditional models (such as ANOVA) which are based on the general linear model. LMMs work by modelling individual data points (rather than aggregate data), can cope with unbalanced designed, missing data, a combination of categorical and continuous predictors, multiple random effects, participants and item covariates - and with GLMMs we can model data of different distribution types (e.g., data from the binomial distribution). The philosophy begind (G)LMMs is relatively straightforward and can be thought of as an extension of the general linear model. In this first video, I'll summarise the general linear model and then show how LMMs take things a little bit further.
 
+&nbsp;&nbsp;
+
 [video 1 here]
+
+&nbsp;&nbsp;
+
+You can download the slides in .odp format by clicking [here](../slides/Mixed_Models_Part_1.odp) and in .pdf format by clicking on the image below. 
+
+&nbsp;&nbsp;
+
+<center>
+
+[![Link to Data Visualisation slides](../images/mixed_models_pt1.png){width=75%}](../slides/Mixed_Models_Part_1.pdf)
+
+</center>
+
+&nbsp;&nbsp;
 
 Once you've watched the video above, run the code below on your own machines.
 
@@ -99,7 +115,11 @@ For a further gentle introduction to (G)LMMs I recommend you have a look at thes
 
 In this next video I'll show you how we might build a LMM to model data from a one factor design with three levels.
 
+&nbsp;&nbsp;
+
 [video 2]
+
+&nbsp;&nbsp;
 
 Once you've watched the video, run the code below on your own machines. 
 
