--- a/scripts/15_mixed_models_pt1.Rmd
+++ b/scripts/15_mixed_models_pt1.Rmd
@@ -17,11 +17,15 @@ knitr::opts_chunk$set(echo = TRUE)
 
 In this workshop we will take our first look at (generalised) linear mixed models (GLMMs or LMMs). The use of LMMs is becoming increasingly widespread across many aspect of the Psychological and Life Sciences in place of more traditional models (such as ANOVA) which are based on the general linear model. LMMs work by modelling individual data points (rather than aggregate data), can cope with unbalanced designed, missing data, a combination of categorical and continuous predictors, multiple random effects, participants and item covariates - and with GLMMs we can model data of different distribution types (e.g., data from the binomial distribution). The philosophy begind (G)LMMs is relatively straightforward and can be thought of as an extension of the general linear model. In this first video, I'll summarise the general linear model and then show how LMMs take things a little bit further.
 
-&nbsp;&nbsp;
-
-[video 1 here]
+<center>
 
 &nbsp;&nbsp;
+
+<iframe width="560" height="315" src="https://youtube.com/embed/gELAuRHCEbw" frameborder="0" allowfullscreen></iframe>
+
+&nbsp;&nbsp;
+
+</center>
 
 ## Slides
 
@@ -31,7 +35,7 @@ You can download the slides in .odp format by clicking [here](../slides/Mixed_Mo
 
 <center>
 
-[![Link to Data Visualisation slides](../images/mixed_models_pt1.png){width=75%}](../slides/Mixed_Models_Part_1.pdf)
+[![Link to slides](../images/mixed_models_pt1.png){width=75%}](../slides/Mixed_Models_Part_1.pdf)
 
 </center>
 
@@ -119,16 +123,6 @@ For a further gentle introduction to (G)LMMs I recommend you have a look at thes
 ## Mixed Models
 ### One Factor Design With Two Levels
 
-In this next video I'll show you how we might build a LMM to model data from a one factor design with three levels.
-
-&nbsp;&nbsp;
-
-[video 2]
-
-&nbsp;&nbsp;
-
-Once you've watched the video, run the code below on your own machines. 
-
 Imagine we are interested in how a person’s reaction time varies whether they’re responding to Large or Small target items. We observe the same 10 people each responding to 5 Large and 5 Small target items. We have 10 observations per person. These observations are not independent of each other as (which is an assumption of a linear model).
 
 Imagine also that we have different Target Items (e.g., 10 different items that were presented in either in Large or Small format). Each Target Item might have been a little different. One particular Target might just be responded to more quickly (regardless of what condition it was in) - in other words, the Target Items will also have different baselines.
@@ -191,21 +185,26 @@ mixed_model_slopes <- lmer(rt ~ condition + (1 + condition | subject)
                            + (1 + condition | item), data = mixed_model_data)
 ```
 
-We can use the `{performance}` package to check our model assumptions. Note, we expect to see our residuals being normally distributed (as is the case with linear models).
+We can investigate the model parameter estimates using the `summary()` function.
 
-```{r, message=FALSE}
-library(performance)
+```{r}
+summary(mixed_model_slopes)
 ```
-
-```{r, message=FALSE, warning=FALSE}
-check_model(mixed_model_slopes)
-```
+We can see that with a more complex random effect structure (i.e., random slopes as well as intercepts), the effect of our fixed effect of condition is still clearly there (and it is significant).
 
 ### One Factor With Three Levels
 
 In this next video, I'll show you how to build a mixed model for a design where you have one experimental factor with three levels.
 
-[video 3]
+<center>
+
+&nbsp;&nbsp;
+
+<iframe width="560" height="315" src="https://youtube.com/embed/yfmqBTeyoBk" frameborder="0" allowfullscreen></iframe>
+
+&nbsp;&nbsp;
+
+</center>
 
 Once you've watched the video, run the code below on your own machines. 
 
@@ -252,6 +251,7 @@ factor_1_model <- lmer(Gaze ~ Condition + (1 | Subject) + (1 | Item),
 We can check the model assumptions using the `{performance}` package.
 
 ```{r, warning=FALSE, message=FALSE}
+library(performance)
 check_model(factor_1_model)
 ```
 
@@ -290,7 +290,7 @@ Within R, import the dataset “data1.csv” that can be found at:
 
 `https://raw.githubusercontent.com/ajstewartlang/15_mixed_models_pt1/master/data/data1.csv`
 
-These data are from a reaction time experiment. Fifty participants had to respond to a word on the screen. Their task was to press a button on a button box only when they recognized the word (our DV is measured in milliseconds). The words were either Rare or Common. The design is repeated measures. We might expect Common words to be recognized more quickly than Common words. Run the appropriate LMM to determine whether this is indeed correct.
+These data are from a reaction time experiment. Fifty participants had to respond to a word on the screen. Their task was to press a button on a button box only when they recognized the word (our DV is measured in milliseconds). The words were either Rare or Common. The design is repeated measures. We might expect Common words to be recognized more quickly than Rare words. Run the appropriate LMM to determine whether this is indeed correct.
 
 You should find a mixed model where RTs to the `Rare` condition are about 200 ms. slower than RTs to the `Common` condition, and this is a significant difference - so our prediction is supported. Did you remember to check the model assumptions?
 
