--- a/scripts/15_mixed_models_pt1.Rmd
+++ b/scripts/15_mixed_models_pt1.Rmd
@@ -200,7 +200,7 @@ In this next video, I'll show you how to build a mixed model for a design where 
 
 &nbsp;&nbsp;
 
-<iframe width="560" height="315" src="https://youtube.com/embed/yfmqBTeyoBk" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://youtube.com/embed/Y8hW9gdW8i0" frameborder="0" allowfullscreen></iframe>
 
 &nbsp;&nbsp;
 
